# assistance-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  generar_imagen.sh  pyproject.toml  requirements.txt  setup.cfg  workspace.code-workspace
docker/: dockerfile
docker/supervisor/: rest.conf
old_to_refactor/docker/supervisor/: telegram.conf
old_to_refactor/scripts/: crear_base.py  imporar_marcaciones_csv.py
old_to_refactor/scripts/relojes/: activar_reloj.py  desactivar_reloj.py
old_to_refactor/src/: setup.py
old_to_refactor/src/config/: config.json
scripts/: crear_tablas.py  ejecutar-mongo-express.py  ejecutar-mongo-express.sh  imporar_marcaciones_csv.py  migrar_marcaciones.py  migrar_usuarios.py  sincronizar_justificaciones.py  ver_marcaciones_reloj.py
scripts/compensatorios/: nuevoAViejo.py  viejoANuevo.py
scripts/presi/: migrar_justificaciones.py  migrar_logs.py
scripts/relojes/: obtener_todos_los_usuarios.py  obtener_usuarios.py
scripts/telegram/: send_message.py
scripts/viejos/: aprobar_justificaciones_pendientes.py  migrar_marcaciones.py  sincronizar_justificaciones.py
src/: .gitignore  setup.py
src/assistance/application/: add_logs_from_clock.py
src/assistance/domain/: entities.py  repo.py
src/assistance/firmware/: PyZKDevice.py  ZKSoftware.py  activar_reloj.py  actualizar_hora.py  borrar_reloj.py  desactivar_reloj.py  eliminar_marcaciones.py  insertar_usuario.py  insertar_usuarios.py  obtener_estado.py  obtener_huellas.py  obtener_log_operaciones.py  obtener_marcaciones.py  obtener_usuarios.py  (+4 more)
src/config/: config.json
(+93 files in other folders)
