[metadata]
name = assistance-api
version = 2.0.4
description = assistance api
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.9'


[options]
packages = find_namespace:
install_requires=
    pydantic
    requests
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    pyzk,
    redis

python_requires = >=3.9
package_dir = 
    =src
    
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest >= 7.1
    pytest-cov >= 3.0
    mypy >= 0.950
    flake8 >= 4.0
    tox >= 3.25

[options.package_data]
api = py.typed

[flake8]
max-line-length = 160
